0.14.9
	bugfix: upgrade to 0.14.8 broke IPv4 prefix creation
	bugfix: more DB cleanups
	bugfix: SNMP didn't work properly for C4948 ports
	update: Live VLANs color legend now distinguishes between 1 and 0
		MAC addresses on a port
0.14.8 2007-12-22
	bugfix: adjusted hardcoded values in VLAN trigger
	bugfix: adjusted HW, SW and port types in SNMP data collector
	bugfix: Cisco connector: tolerate switch ports in suspended state
	bugfix: nameless object in link list could not be clicked
	bugfix: fix SQL tables structure
	bugfix: Live VLANs displayed VLANs missing from switch table improperly
	bugfix: sort auth data by username
	bugfix: NATv4 rules were added incorrectly
	update: corrected some dictionary entries
	update: better layout for Live VLANs tab
	update: better logo
	update: stick with GPL version 2, not any later version
	new feature: UI option to control asset tag warning
	new feature: UUID (RFC4122) sticker
	new feature: empty rackspace detector
	new feature: initial wiki-style markup support in dictionary
0.14.7 2007-12-05
	bugfix: provide better SQL dumps for new installations
	bugfix: gateways/switchvlans minor updates
	bugfix: logout link could fail sometimes
	bugfix: avoid short PHP tags for better compatibility across
	  different PHP installations (reported by Tom Laermans)
	bugfix: remove odd records from IPAddress once more
	bugfix: fixed IPv4 address browsing for MySQL-4 DB
	update: better attributes edit form by Aaron Dummer
	update: numerous UI adjustments across all pages
	update: new Dell, Foundry and Cisco records in the dictionary
	new feature: more cisco models support in gateways/switchvlans
	new feature: initial implementation of SNMP port data importer
	new feature: UI configuration reset tab
	new feature: initial reports code
0.14.6 2007-10-15
	new feature: browser-side validation for a new IPv4 network
	  (contributed by Aaron Dummer)
	new feature: logout link (same author)
	new feature: key hint in dictionary browser